More updates on EW models, more questions to be asked that will appear on mailing lists
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@33 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/doc.bib
+++ b/doc/doc.bib
@@ -36,6 +36,8 @@
 
 %%%%%%%%%%%%%%%%EW models
 
+%%add:1212.3352
+
 @article{Zhou:2013fla,
       author         = "Zhou, Ning and Berge, David and Whiteson, Daniel",
       title          = "{Mono-everything: combined limits on dark matter
