More updates on EW models, now it even compiles
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@34 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/tex/EWSpecificModels.tex
+++ b/doc/tex/EWSpecificModels.tex
@@ -151,21 +151,25 @@ The parton shower is done using Pythia 8, with a matching scale of...
 
 \paragraph{EFT models with direct DM-boson couplings}
 
-A complete list of effective operators with direct DM/boson couplings, 
-up to dimension 7, can be found in~\citep{Cotta:2012nj}. 
+A complete list of effective operators with direct DM/boson couplings for
+Dirac DM, up to dimension 7, can be found in~\citep{Cotta:2012nj}. 
 
-Following the notation of
+Following the notation of~\citep{1212.3352}, the dimension 5 benchmark models 
+from this category have a Lagrangian that includes terms such as:
 
-
-
-The dimension 5 benchmark models from this category for Dirac DM have a Lagrangian
-that includes terms such as:
-
-\textbf{[CD: insert Lagrangian terms from 1212.3352]}. 
-
-where m_Z and m_W are the masses of the Z and W boson, $W^{+\mu}$ and $Z^{+\mu}$
+\begin{eqnarray}
+\frac{m_W^2}{\Lambda_5^3} ~\bar{\chi} \chi ~W^{+ \mu} W^{-}_\mu
++ \frac{m_Z^2}{2 \Lambda_5^3} ~ \bar{\chi} \chi ~ Z^\mu Z_\mu ~.
+\end{eqnarray}
+ 
+where $m_Z$ and $m_W$ are the masses of the $Z$ and $W$ boson, $W^{\mu}$ and $Z^{\mu}$
 are the fields of the gauge bosons, $\chi$ denote the Dark Matter fields 
-and $\Lambda_5$ is the effective field theory scale. 
+and $\Lambda_5$ is the effective field theory scale. This operator 
+induces signatures with MET in conjunction with Z and W bosons at tree level,
+while at loop level it induces couplings to photon pairs and $Z \gamma$ through W loops. 
+\textbf{[CD: I believe the paper but I couldn't write this down. How much detail do we want here?]}. 
+
+
 
 
 
