--- a/doc/doc.bib
+++ b/doc/doc.bib
@@ -36,7 +36,22 @@
 
 %%%%%%%%%%%%%%%%EW models
 
-%%add:1212.3352
+@article{Carpenter:2012rg,
+      author         = "Carpenter, Linda M. and Nelson, Andrew and Shimmin, Chase
+                        and Tait, Tim M.P. and Whiteson, Daniel",
+      title          = "{Collider searches for dark matter in events with a Z
+                        boson and missing energy}",
+      journal        = "Phys.Rev.",
+      number         = "7",
+      volume         = "D87",
+      pages          = "074005",
+      doi            = "10.1103/PhysRevD.87.074005",
+      year           = "2013",
+      eprint         = "1212.3352",
+      archivePrefix  = "arXiv",
+      reportNumber   = "UCI-HEP-TR-2012-21",
+      SLACcitation   = "%%CITATION = ARXIV:1212.3352;%%",
+}
 
 @article{Zhou:2013fla,
       author         = "Zhou, Ning and Berge, David and Whiteson, Daniel",
