Added Matt Buckley's tex
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@36 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/doc.tex
+++ b/doc/doc.tex
@@ -3,6 +3,14 @@
 \usepackage{graphicx}
 \usepackage[svgnames]{xcolor}
 \usepackage{hyperref}
+
+\usepackage{slashed}
+\usepackage{amsfonts}
+\usepackage{amsmath,amssymb}
+\usepackage{slashed}
+\usepackage{feynmp}
+\DeclareGraphicsRule{*}{mps}{*}{}
+
 \setkeys{Gin}{width=\linewidth,totalheight=\textheight,keepaspectratio}
 \usepackage{mathtools} % extended mathematics
 \usepackage{booktabs} % book-quality tables
@@ -62,6 +70,10 @@
 \section{Generic models for mono-jet signatures}
 \label{subsec:MonojetLikeModels}
 \input{tex/MonojetLikeModels}
+
+\section{Scalar models}
+\label{subsec:ScalarModels}
+\input{tex/ScalarModels}
 
 \section{Specific models for signatures with EW bosons}
 \label{subsec:EWSpecificModels}
