--- a/doc/tex/EWSpecificModels.tex
+++ b/doc/tex/EWSpecificModels.tex
@@ -22,7 +22,9 @@ The models considered can be divided in four categories:
 \begin{description}
  \item[EFT models where the boson is radiated from the initial state] As depicted in 
  the top diagram of Figure~\ref{fig:VPlusMET_EFT}, these  models follow the nomenclature and theory 
- for the EFT benchmarks commonly used by MET+X searches~\citep{Goodman:2010ku}. 
+ for the EFT benchmarks commonly used by MET+X searches~\citep{Goodman:2010ku}. These models
+ have been used in past experimental searches~~\citep{Khachatryan:2014rwa, Aad:2014vka,Khachatryan:2014tva, Aad:2014vka, 
+ ATLAS:2014wra,Aad:2013oja}, and they will not be shown here. 
  \item[EFT models where the boson is directly coupled to DM] Shown in the bottom of Figure~\ref{fig:VPlusMET_EFT},
  these models allow for an EFT vertex that directly couples the boson to Dark Matter. 
  \item[Simplified models where the boson is radiated from the initial state] These models follow those
@@ -48,9 +50,9 @@ boson decays are required in the final state.
 The rates for the Higgs boson radiation is too low for these models 
 to be considered a viable benchmark~\citep{Carpenter:2013xra}.
 
-However, the presence of photons~\citep{Khachatryan:2014rwa, Aad:2014vka}, 
-leptons from W and Z decays~\citep{Khachatryan:2014tva, Aad:2014vka, ATLAS:2014wra} 
-and W or Z bosons decaying hadronically~\citep{Aad:2013oja}
+However, the presence of photons
+leptons from W and Z decays
+and W or Z bosons decaying hadronically
 allows to reject the background more effectively, making Z/gamma/W+MET searches 
 still worth comparing with searches in the jet+MET final state. 
 
