added description of t-channel models from Amelia Brennan
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@39 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/doc.bib
+++ b/doc/doc.bib
@@ -238,3 +238,68 @@
       reportNumber   = "CMS-EXO-12-060, CERN-PH-EP-2014-176",
       SLACcitation   = "%%CITATION = ARXIV:1408.2745;%%",
 }
+
+% references from amelia brennan for t-channel section
+
+@ARTICLE{Papucci:2014,
+  AUTHOR       = "Michele Papucci and Alessandro Vichi and Kathryn M. Zurek",
+  TITLE        = "{Monojet versus the rest of the world I: $t$-channel models}",
+  JOURNAL      = "JHEP",
+  ISSUE        = "11",
+  PAGES        = "",
+  YEAR         = "2014",
+}
+@ARTICLE{Tait:2013,
+  AUTHOR       = "Anthony DiFranzo and Keiko I. Nagao and Arvind Rajaraman and Tim M. P. Tait",
+  TITLE        = "{Simplified Models for Dark Matter Interacting With Quarks}",
+  JOURNAL      = "JHEP",
+  VOLUME       = "1311",
+  ISSUE        = "014",
+  PAGES        = "",
+  YEAR         = "2013",
+}
+@ARTICLE{Yavin:14092893,
+  AUTHOR       = "Jalal Abdallah and others",
+  TITLE        = "{Simplified Models for Dark Matter and Missing Energy Searches at the LHC}",
+  JOURNAL      = "arXiv:1409.2893",
+  VOLUME       = "",
+  ISSUE        = "",
+  PAGES        = "",
+  YEAR         = "2014",
+}
+@ARTICLE{Chang:2014,
+  AUTHOR       = "Spencer Chang and Ralph Edezhath and Jeffrey Hutchinson and Markus Luty",
+  TITLE        = "{Effective WIMPs}",
+  JOURNAL      = "Phys. Rev. D",
+  VOLUME       = "89",
+  ISSUE        = "",
+  PAGES        = "015011",
+  YEAR         = "2014",
+}
+@ARTICLE{Bai:201311171,
+  AUTHOR       = "Yang Bai and Joshua Berger",
+  TITLE        = "{Fermion Portal Dark Matter}",
+  JOURNAL      = "JHEP",
+  VOLUME       = "11",
+  ISSUE        = "",
+  PAGES        = "171",
+  YEAR         = "2013",
+}
+@ARTICLE{An:201489115014,
+  AUTHOR       = "Haipeng An and Lian-Tao Wang and Hao Zhang",
+  TITLE        = "{Dark matter with $t$-channel mediator: a simple step beyond contact interaction}",
+  JOURNAL      = "Phys. Rev. D",
+  VOLUME       = "89",
+  ISSUE        = "",
+  PAGES        = "115014",
+  YEAR         = "2014",
+}
+@ARTICLE{Busoni:201409022,
+  AUTHOR       = "Giorgio Busoni and Andrea De Simone and Thomas Jacques and Enrico Morgante and Antonio Riotto",
+  TITLE        = "{On the Validity of the Effective Field Theory for Dark Matter Searches at the LHC Part III: Analysis for the $t$-channel}",
+  JOURNAL      = "JCAP",
+  VOLUME       = "09",
+  ISSUE        = "022",
+  PAGES        = "",
+  YEAR         = "2014",
+}
