--- a/doc/tex/MonojetLikeModels.tex
+++ b/doc/tex/MonojetLikeModels.tex
@@ -65,3 +65,5 @@ The POWHEG and Madgraph implementations were compared and the yields obtained fr
 
 \paragraph{Colored scalar mediator, t-channel exchange}
 
+\input tex/TChannelModels.tex
+
