add EFT validity summary, clean up bibliography
EFT validity summary from:

Thomas Jacques <thomas.jacques@unige.ch>
Davide <davide.racco@unige.ch>
Andrea Wulzer <andrea.wulzer@pd.infn.it>
Antonio Riotto <antonio.riotto@unige.ch>
Deborah Pinna <deborah.pinna@cern.ch>
Giorgio Busoni <giorgio.busoni@sissa.it>
Enrico Morgante <enrico.morgante@unige.ch>
Steven Schramm <sschramm@physics.utoronto.ca>
Andrea De Simone <andrea.desimone@sissa.it>
Fabio Zwirner <fabio.zwirner@pd.infn.it>


git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@43 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/doc.bib
+++ b/doc/doc.bib
@@ -239,8 +239,6 @@
       SLACcitation   = "%%CITATION = ARXIV:1408.2745;%%",
 }
 
-% references from amelia brennan for t-channel section
-
 @ARTICLE{Papucci:2014,
   AUTHOR       = "Michele Papucci and Alessandro Vichi and Kathryn M. Zurek",
   TITLE        = "{Monojet versus the rest of the world I: $t$-channel models}",
@@ -294,12 +292,94 @@
   PAGES        = "115014",
   YEAR         = "2014",
 }
-@ARTICLE{Busoni:201409022,
-  AUTHOR       = "Giorgio Busoni and Andrea De Simone and Thomas Jacques and Enrico Morgante and Antonio Riotto",
-  TITLE        = "{On the Validity of the Effective Field Theory for Dark Matter Searches at the LHC Part III: Analysis for the $t$-channel}",
-  JOURNAL      = "JCAP",
-  VOLUME       = "09",
-  ISSUE        = "022",
-  PAGES        = "",
-  YEAR         = "2014",
+@article{Busoni:2014haa,
+      author         = "Busoni, Giorgio and De Simone, Andrea and Jacques, Thomas
+                        and Morgante, Enrico and Riotto, Antonio",
+      title          = "{On the Validity of the Effective Field Theory for Dark
+                        Matter Searches at the LHC Part III: Analysis for the
+                        $t$-channel}",
+      journal        = "JCAP",
+      volume         = "1409",
+      pages          = "022",
+      doi            = "10.1088/1475-7516/2014/09/022",
+      year           = "2014",
+      eprint         = "1405.3101",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      SLACcitation   = "%%CITATION = ARXIV:1405.3101;%%",
+} 
+@article{Busoni:2013lha,
+      author         = "Busoni, Giorgio and De Simone, Andrea and Morgante,
+                        Enrico and Riotto, Antonio",
+      title          = "{On the Validity of the Effective Field Theory for Dark
+                        Matter Searches at the LHC}",
+      journal        = "Phys.Lett.",
+      volume         = "B728",
+      pages          = "412-421",
+      doi            = "10.1016/j.physletb.2013.11.069",
+      year           = "2014",
+      eprint         = "1307.2253",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "CERN-PH-TH-2013-151, SISSA-29-2013-FISI",
+      SLACcitation   = "%%CITATION = ARXIV:1307.2253;%%",
+}
+
+@article{Aad:2015zva,
+      author         = "Aad, Georges and others",
+      title          = "{Search for new phenomena in final states with an
+                        energetic jet and large missing transverse momentum in pp
+                        collisions at $\sqrt{s}=8$ TeV with the ATLAS detector}",
+      collaboration  = "ATLAS",
+      year           = "2015",
+      eprint         = "1502.01518",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "CERN-PH-EP-2014-299",
+      SLACcitation   = "%%CITATION = ARXIV:1502.01518;%%",
+}
+
+@article{Racco:2015dxa,
+      author         = "Racco, Davide and Wulzer, Andrea and Zwirner, Fabio",
+      title          = "{Robust collider limits on heavy-mediator Dark Matter}",
+      year           = "2015",
+      eprint         = "1502.04701",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "CERN-PH-TH-2015-014, DFPD-2015-TH-05",
+      SLACcitation   = "%%CITATION = ARXIV:1502.04701;%%",
+}
+
+@article{Buckley:2014fba,
+      author         = "Buckley, Matthew R. and Feld, David and Goncalves,
+                        Dorival",
+      title          = "{Scalar Simplified Models for Dark Matter}",
+      journal        = "Phys.Rev.",
+      number         = "1",
+      volume         = "D91",
+      pages          = "015017",
+      doi            = "10.1103/PhysRevD.91.015017",
+      year           = "2015",
+      eprint         = "1410.6497",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "IPPP-14-92, DCPT-14-184",
+      SLACcitation   = "%%CITATION = ARXIV:1410.6497;%%",
+}
+
+@article{Fitzpatrick:2010em,
+      author         = "Fitzpatrick, A. Liam and Hooper, Dan and Zurek, Kathryn
+                        M.",
+      title          = "{Implications of CoGeNT and DAMA for Light WIMP Dark
+                        Matter}",
+      journal        = "Phys.Rev.",
+      volume         = "D81",
+      pages          = "115005",
+      doi            = "10.1103/PhysRevD.81.115005",
+      year           = "2010",
+      eprint         = "1003.0014",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "FERMILAB-PUB-10-042-A",
+      SLACcitation   = "%%CITATION = ARXIV:1003.0014;%%",
 }
