--- a/doc/tex/ScalarModels.tex
+++ b/doc/tex/ScalarModels.tex
@@ -41,7 +41,7 @@ In colliders, if the mediator is produced on-shell, as is the primary mode of da
 
 In addition, as this is a Simplified Model, it is possible that the mediator can decay into additional states present in a full theory that we have neglected. For example, the mediator could decay into additional new charged particles which themselves eventually decay into dark matter, but with additional visible particles that would move the event out of the selection criteria of monojets or similar missing energy searches. Thus, the widths calculated in Eqs.~\eqref{eq:scalarwidth} and \eqref{eq:pseudoscalarwidth} are lower bounds on the total width. 
 
-As a result of these issues, the width of the mediator is often treated as an independent variable in Simplified Models with $s$-channel production of dark matter. Fortunately, for on-shell production, the effect of changing the width is only a rescaling of the total event rate assuming that $\Gamma_{\phi/a} < m_{\phi/a}$ \cite{1410.6497}, which is a necessary condition for a valid weakly coupled theory. As a result, changing the width just rescales the total event rate at colliders. In the case when the dark matter is produced through an off-shell mediator, the width is not relevant. We therefore recommend that experimental and theoretical bounds on $s$-channel models make the assumption that the width is minimal, set by Eqs.~\eqref{eq:scalarwidth} or \eqref{eq:pseudoscalarwidth}, and treat it as a dependent quantity, rather than an additional free parameter.
+As a result of these issues, the width of the mediator is often treated as an independent variable in Simplified Models with $s$-channel production of dark matter. Fortunately, for on-shell production, the effect of changing the width is only a rescaling of the total event rate assuming that $\Gamma_{\phi/a} < m_{\phi/a}$ \cite{Buckley:2014fba}, which is a necessary condition for a valid weakly coupled theory. As a result, changing the width just rescales the total event rate at colliders. In the case when the dark matter is produced through an off-shell mediator, the width is not relevant. We therefore recommend that experimental and theoretical bounds on $s$-channel models make the assumption that the width is minimal, set by Eqs.~\eqref{eq:scalarwidth} or \eqref{eq:pseudoscalarwidth}, and treat it as a dependent quantity, rather than an additional free parameter.
 
 Furthermore, as we are dealing with a 4D parameter space, it is necessary to consider how to reduce the parameter space to display results which can be compared between experiments and with theory. Clearly, the dependence of the constraints from experiments on the masses $m_\chi$ and $m_{\phi/a}$ cannot be suppressed, as the bounds will have non-trivial kinematic dependences on the masses. This leaves the couplings $g_\chi$ and $g_v$. The most straightforward assumption to make is to set $g_\chi = g_v$. This has the somewhat unfortunate result of making certain types of experimental results appear more effective than others. For example, with $g_\chi = g_v$, we expect the mediator branching ratio to dark matter to completely dominate over the visible channels, unless the top channel is kinematically allowed. This would make resonance searches in visible channels for the mediator appear to be uncompetitive. However, some choice must be made, and setting the two couplings equal to each other is perhaps the simplest.
 
@@ -81,11 +81,11 @@ For the scalar mediator model, the interaction with direct detection nuclear tar
 \sigma_{\chi-p,n} & = & \frac{\mu^2}{\pi} f_{p,n}^2 \\
 f_{p,n} & = & \sum_{q=u,d,s} f^{p,n}_q \frac{m_{p,n}}{m_q} \left(\frac{g_\chi g_v y_q}{\sqrt{2}m_\phi^2} \right) + \frac{2}{27} f_{\rm TG}^{p,n} \sum_{q=c,b,t} \frac{m_{p,n}}{m_q} \left(\frac{g_\chi g_v y_q}{\sqrt{2}m_\phi^2} \right),
 \end{eqnarray}
-where $\mu$ is the dark matter-nucleon reduced mass $\mu = (m_\chi m_{p,n})/(m_\chi + m_{p,n})$, and the nuclear matrix elements $f_{q}^{p,n}$ and $f_{\rm TG}^{p,n}$ must be extracted from lattice QCD. For our purposes, the neutron and proton matrix elements are essentially identical. Using the values from Ref.~\cite{1003.0014} gives (for both protons and neutrons)
+where $\mu$ is the dark matter-nucleon reduced mass $\mu = (m_\chi m_{p,n})/(m_\chi + m_{p,n})$, and the nuclear matrix elements $f_{q}^{p,n}$ and $f_{\rm TG}^{p,n}$ must be extracted from lattice QCD. For our purposes, the neutron and proton matrix elements are essentially identical. Using the values from Ref.~\cite{Fitzpatrick:2010em} gives (for both protons and neutrons)
 \begin{eqnarray}
 f_u & = & 0.02 \\
 f_d & = & 0.026 \\
 f_s & = & 0.118 \\
 f_{\rm TG} & = & 0.84
-\end{eqnarray}
+\end{eqnarray}.
 
